--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include src/vws/py.typed
 include requirements.txt
 include dev-requirements.txt
+include setup-requirements.txt
 include pyproject.toml
