Move mypy config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,3 +147,22 @@ ignore = [
     "vuforia_secrets.env.example",
     "lint.mk",
 ]
+
+[tool.mypy]
+
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+follow_imports = "normal"
+ignore_missing_imports = true
+no_implicit_optional = true
+strict_equality = true
+strict_optional = true
+warn_no_return = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_configs = true
+warn_unused_ignores = true
