--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,3 @@
 include src/vws/py.typed
-include requirements.txt
-include dev-requirements.txt
-include setup-requirements.txt
+include requirements/*.txt
 include pyproject.toml
