--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,6 +146,18 @@ ignore = [
     "lint.mk",
 ]
 
+[tool.doc8]
+
+max_line_length = 2000
+ignore_path = [
+    "./.eggs",
+    "./docs/build",
+    "./docs/build/spelling/output.txt",
+    "./node_modules",
+    "./src/*.egg-info/",
+    "./src/*/_setuptools_scm_version.txt",
+]
+
 [tool.mypy]
 
 check_untyped_defs = true
