--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -29,15 +29,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: actions/cache@v2
-        with:
-          path: ~\AppData\Local\pip\Cache
-          # This is like the example but we use ``*requirements.txt`` rather
-          # than ``requirements.txt`` because we have multiple requirements
-          # files.
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: ~\AppData\Local\pip\Cache
+      #     # This is like the example but we use ``*requirements.txt`` rather
+      #     # than ``requirements.txt`` because we have multiple requirements
+      #     # files.
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-
 
       - name: "Install dependencies"
         run: |
