Add GitHub Actions to dependabot checks

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,14 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: twine
-    versions:
-    - 3.4.0
-  - dependency-name: pylint
-    versions:
-    - 2.7.0
-    - 2.7.1
-  - dependency-name: pyroma
-    versions:
-    - 2.6.1
+- package-ecosystem: "github-actions"
+  directory: "/"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
