--- a/pyproject.toml
+++ b/pyproject.toml
@@ -214,6 +214,12 @@ license = { file = "LICENSE" }
 name = "vws-python"
 readme = { file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.10"
+dependencies = [
+    "VWS-Auth-Tools",
+    "func-timeout",
+    "requests",
+    "urllib3",
+]
 
 [project.urls]
 Source = "https://github.com/VWS-Python/vws-python"
