--- a/pyproject.toml
+++ b/pyproject.toml
@@ -221,6 +221,38 @@ dependencies = [
     "urllib3",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "PyYAML==6.0",
+    "Pygments==2.14.0",
+    "Sphinx-Substitution-Extensions==2022.2.16",
+    "Sphinx==6.1.3",
+    "VWS-Python-Mock==2023.3.5",
+    "VWS-Test-Fixtures==2023.3.5",
+    "black==23.1.0",
+    "check-manifest==0.49",
+    "doc8==1.1.1",
+    "dodgy==0.2.1",
+    "freezegun==1.2.2",
+    "furo==2022.12.7",
+    "mypy==1.1.1",
+    "pdm==2.4.8",
+    "pip_check_reqs==2.4.4",
+    "pydocstyle==6.3.0  ",
+    "pyenchant==3.2.2 ",
+    "pylint==2.17.0 ",
+    "pyroma==4.2",
+    "pytest-cov==4.0.0",
+    "pytest==7.2.2 ",
+    "ruff==0.0.254",
+    "sphinx-autodoc-typehints==1.22",
+    "sphinx-prompt==1.5.0",
+    "sphinxcontrib-spelling==8.0.0",
+    "types-freezegun==1.1.10",
+    "types-requests==2.28.11.15",
+    "vulture==2.7",
+]
+
 [project.urls]
 Source = "https://github.com/VWS-Python/vws-python"
 Documentation = "https://vws-python.readthedocs.io/en/latest/"
