--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,7 +148,13 @@ module = [
 ignore_missing_imports = true
 
 [build-system]
-requires = ["setuptools", "pip", "wheel"]
+requires = [
+    "pip",
+    "setuptools",
+    "setuptools-scm-git-archive==1.4",
+    "setuptools_scm[toml]==7.1.0",
+    "wheel",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.distutils.bdist_wheel]
