--- a/pyproject.toml
+++ b/pyproject.toml
@@ -256,6 +256,7 @@ dev = [
     "sphinxcontrib-spelling==8.0.0",
     "types-freezegun==1.1.10",
     "types-requests==2.28.11.15",
+    "types-setuptools==67.6.0.0",
     "vulture==2.7",
 ]
 
