--- a/pyproject.toml
+++ b/pyproject.toml
@@ -249,6 +249,7 @@ dev = [
     "pylint==2.17.0 ",
     "pyroma==4.2",
     "pytest-cov==4.0.0",
+    "pytest_codeblocks==0.16.1",
     "pytest==7.2.2 ",
     "ruff==0.0.254",
     "sphinx-autodoc-typehints==1.22",
