--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ line-length = 79
 
 branch = true
 
+[tool.coverage.report]
+exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
+
 [tool.pytest.ini_options]
 
 xfail_strict = true
