--- a/pyproject.toml
+++ b/pyproject.toml
@@ -213,7 +213,7 @@ dynamic = ["version"]
 keywords = ["vuforia", "vws", "client"]
 license = { file = "LICENSE" }
 name = "vws-python"
-readme = { file = "README.md", content-type = "text/markdown"}
+readme = { file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.10"
 dependencies = [
     "VWS-Auth-Tools",
@@ -244,12 +244,12 @@ dev = [
     "pylint==2.17.0 ",
     "pyroma==4.2",
     "pytest-cov==4.0.0",
-    "pytest_codeblocks==0.16.1",
     "pytest==7.2.2 ",
     "ruff==0.0.256",
     "sphinx-autodoc-typehints==1.22",
     "sphinx-prompt==1.5.0",
     "sphinxcontrib-spelling==8.0.0",
+    "sybil==4.0.1",
     "types-freezegun==1.1.10",
     "types-requests==2.28.11.15",
     "vulture==2.7",
