--- a/pyproject.toml
+++ b/pyproject.toml
@@ -195,6 +195,11 @@ ignore = [
     "S311",
 ]
 
+# Do not automatically remove commented out code.
+# We comment out code during development, and with VSCode auto-save, this code
+# is sometimes annoyingly removed.
+unfixable = ["ERA001"]
+
 [tool.ruff.per-file-ignores]
 "tests/test_*.py" = [
     # Do not require tests to have a one-line summary.
