Remove unnecessary dependency on setuptools-scm-git-archive. This is now covered by setuptools_scm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,8 +154,7 @@ ignore_missing_imports = true
 requires = [
     "pip",
     "setuptools",
-    "setuptools-scm-git-archive==1.4",
-    "setuptools_scm[toml]==7.1.0",
+    "setuptools_scm[toml]>=7.1.0",
     "wheel",
 ]
 build-backend = "setuptools.build_meta"
