--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,13 +147,13 @@ module = [
 ignore_missing_imports = true
 
 [build-system]
+build-backend = "setuptools.build_meta"
 requires = [
     "pip",
     "setuptools",
-    "setuptools_scm[toml]>=7.1.0",
+    "setuptools_scm[toml]>=7.1",
     "wheel",
 ]
-build-backend = "setuptools.build_meta"
 
 [tool.distutils.bdist_wheel]
 universal = true
@@ -203,35 +203,37 @@ unfixable = ["ERA001"]
 ]
 
 [project]
-authors = [ { name = "Adam Dangoor", email = "adamdangoor@gmail.com"} ]
-classifiers = [
-    "Operating System :: POSIX",
-    "Environment :: Web Environment",
-    "Programming Language :: Python :: 3.11",
-    "License :: OSI Approved :: MIT License",
-    "Development Status :: 5 - Production/Stable",
-]
-description = "Interact with the Vuforia Web Services (VWS) API."
-dynamic = ["version"]
-keywords = ["vuforia", "vws", "client"]
-license = { file = "LICENSE" }
 name = "vws-python"
+description = "Interact with the Vuforia Web Services (VWS) API."
 readme = { file = "README.rst", content-type = "text/x-rst"}
+keywords = [
+    "client",
+    "vuforia",
+    "vws",
+]
+license = { file = "LICENSE" }
+authors = [ { name = "Adam Dangoor", email = "adamdangoor@gmail.com"} ]
 requires-python = ">=3.10"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Web Environment",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: POSIX",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+dynamic = [
+    "version",
+]
 dependencies = [
-    "VWS-Auth-Tools",
     "requests",
     "urllib3",
+    "VWS-Auth-Tools",
 ]
-
 [project.optional-dependencies]
 dev = [
-    "PyYAML==6.0.1",
-    "Pygments==2.16.1",
-    "Sphinx-Substitution-Extensions==2022.2.16",
-    "Sphinx==7.2.6",
-    "VWS-Python-Mock==2023.5.21",
-    "VWS-Test-Fixtures==2023.3.5",
     "check-manifest==0.49",
     "doc8==1.1.1",
     "dodgy==0.2.1",
@@ -240,25 +242,31 @@ dev = [
     "mypy==1.6.1",
     "pdm==2.9.3",
     "pip_check_reqs==2.5.3",
-    "pydocstyle==6.3.0  ",
-    "pyenchant==3.2.2 ",
+    "pydocstyle==6.3",
+    "pyenchant==3.2.2",
+    "Pygments==2.16.1",
+    "pylint==3.0.2",
+    "pyproject-fmt==1.3",
     "pyright==1.1.333",
-    "pylint==3.0.2 ",
     "pyroma==4.2",
-    "pytest-cov==4.1.0",
-    "pytest==7.4.3 ",
+    "pytest==7.4.3",
+    "pytest-cov==4.1",
+    "PyYAML==6.0.1",
     "ruff==0.1.2",
-    "sphinx-autodoc-typehints==1.24.0",
-    "sphinx-prompt==1.8.0",
-    "sphinxcontrib-spelling==8.0.0",
+    "Sphinx==7.2.6",
+    "sphinx-autodoc-typehints==1.24",
+    "sphinx-prompt==1.8",
+    "Sphinx-Substitution-Extensions==2022.2.16",
+    "sphinxcontrib-spelling==8",
     "sybil==5.0.3",
     "types-requests==2.31.0.10",
     "vulture==2.10",
+    "VWS-Python-Mock==2023.5.21",
+    "VWS-Test-Fixtures==2023.3.5",
 ]
-
 [project.urls]
-Source = "https://github.com/VWS-Python/vws-python"
 Documentation = "https://vws-python.readthedocs.io/en/latest/"
+Source = "https://github.com/VWS-Python/vws-python"
 
 [tool.setuptools]
 zip-safe = false
