--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,6 +224,7 @@ dependencies = [
 ]
 [project.optional-dependencies]
 dev = [
+    "actionlint-py==1.6.26.11",
     "check-manifest==0.49",
     "doc8==1.1.1",
     "dodgy==0.2.1",
