--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,19 +30,20 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - uses: actions/cache@v4
+        env:
+          UV_CACHE_DIR: ~/.cache/uv
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
+          path: "${{ env.UV_CACHE_DIR }}"
+          key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-uv-
 
       - name: "Install dependencies"
+        env:
+          UV_CACHE_DIR: ~/.cache/uv
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          # We use '--ignore-installed' to avoid GitHub's cache which can cause
-          # issues - we have seen packages from this cache be cause trouble with
-          # pip-extra-reqs.
-          python -m pip install --ignore-installed --upgrade --editable .[dev]
+          python -m pip install --upgrade uv
+          python -m uv pip install --upgrade --editable .[dev]
 
       - name: "Lint"
         run: |
