--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade uv
           uv venv
-          python -m uv pip install --upgrade --editable .[dev]
+          python -m uv pip install --upgrade .[dev]
 
       - name: "Lint"
         env:
