--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,22 +41,20 @@ jobs:
       - name: "Install dependencies"
         env:
           UV_CACHE_DIR: ~/.cache/uv
-          VIRTUAL_ENV: ./.venv
         run: |
           python -m pip install --upgrade uv
           uv venv
+          source ./.venv/bin/activate
           python -m uv pip install --upgrade .[dev]
 
       - name: "Lint"
-        env:
-          VIRTUAL_ENV: ./.venv
         run: |
+          source ./.venv/bin/activate
           make lint
 
       - name: "Run tests"
-        env:
-          VIRTUAL_ENV: ./.venv
         run: |
+          source ./.venv/bin/activate
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
