--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv
           source ./.venv/bin/activate
-          uv pip install --upgrade .[dev]
+          uv pip install --upgrade ".[dev]"
 
       - name: "Lint"
         run: |
