--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,18 +44,18 @@ jobs:
           UV_CACHE_DIR: /home/runner/.cache/uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv
-          source ./.venv/bin/activate
+          uv /home/runner/.venv
+          source /home/runner/.venv/bin/activate
           uv pip install --upgrade --editable ".[dev]"
 
       - name: "Lint"
         run: |
-          source ./.venv/bin/activate
+          source /home/runner/.venv/bin/activate
           make lint
 
       - name: "Run tests"
         run: |
-          source ./.venv/bin/activate
+          source /home/runner/.venv/bin/activate
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
