--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -43,13 +43,13 @@ jobs:
           UV_CACHE_DIR: ~\AppData\Local\uv\Cache
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv ~\AppData\Local\.venv
-          source ~\AppData\Local\.venv
+          uv venv "~\AppData\Local\.venv"
+          source "~\AppData\Local\.venv"
           uv pip install --upgrade --editable ".[dev]"
 
       - name: "Run tests"
         run: |
-          source ~\AppData\Local\.venv
+          source "~\AppData\Local\.venv"
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
