--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -49,8 +49,10 @@ jobs:
           uv pip install --upgrade --editable .[dev]
 
       - name: "Run tests"
+        env:
+          VIRTUAL_ENV: ~\AppData\Local\.venv
         run: |
-          source "~\AppData\Local\.venv"
+          "${{ env.VIRTUAL_ENV }}/Scripts\Activate.ps1"
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
