--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -50,7 +50,9 @@ jobs:
       - name: "Run tests"
         env:
           VIRTUAL_ENV: ~\AppData\Local\.venv
+          ACTIVATE_SCRIPT: ~\AppData\Local\.venv\Scripts\Activate.ps1
         run: |
+          ${{ env.ACTIVATE_SCRIPT }}
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
-          "${{ env.VIRTUAL_ENV }}\bin\python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml"
+          python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml"
