Remove unnecessary quotes

--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -55,4 +55,4 @@ jobs:
           ${{ env.ACTIVATE_SCRIPT }}
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
-          python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml"
+          python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
