--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -51,6 +51,7 @@ jobs:
         env:
           VIRTUAL_ENV: ~\AppData\Local\.venv
         run: |
+          Import-Module ~
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           ${{ env.VIRTUAL_ENV}}/bin/python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
