--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -54,4 +54,4 @@ jobs:
           ${{ github.workspace }}/.venv/Scripts/Activate.ps1
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
-          ${{ env.VIRTUAL_ENV}}/bin/python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
+          python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
