Fix source command in CI stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: "Lint"
         run: |
-          source /home/runner/.venv/bin/activate
+          source ${{ github.workspace }}/.venv/bin/activate
           make lint
 
       - name: "Run tests"
