--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -43,13 +43,13 @@ jobs:
           UV_CACHE_DIR: ~\AppData\Local\uv\Cache
         run: |
           irm https://astral.sh/uv/install.ps1 | iex
-          uv venv ${{ github.workspace }}/.venv
-          ${{ github.workspace }}/.venv/Scripts/Activate.ps1
+          uv venv ${{ github.workspace }}/../.venv
+          ${{ github.workspace }}/../.venv/Scripts/Activate.ps1
           uv pip install --upgrade --editable .[dev]
 
       - name: "Run tests"
         run: |
-          ${{ github.workspace }}/.venv/Scripts/Activate.ps1
+          ${{ github.workspace }}/../.venv/Scripts/Activate.ps1
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
