--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -29,16 +29,27 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - uses: actions/cache@v4
+        env:
+          UV_CACHE_DIR: C:/Users/runner/.cache/
+        with:
+          path: "${{ env.UV_CACHE_DIR }}"
+          key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-
+
       - name: "Install dependencies"
+        env:
+          UV_CACHE_DIR: C:/Users/runner/.cache/
         run: |
           irm https://astral.sh/uv/install.ps1 | iex
-          uv venv ${{ github.workspace }}/../.venv
-          ${{ github.workspace }}/../.venv/Scripts/Activate.ps1
+          uv venv C:/Users/runner/.venv
+          C:/Users/runner/.venv/Scripts/Activate.ps1
           uv pip install --upgrade --editable .[dev]
 
       - name: "Run tests"
         run: |
-          ${{ github.workspace }}/../.venv/Scripts/Activate.ps1
+          C:/Users/runner/.venv/Scripts/Activate.ps1
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
