--- a/pyproject.toml
+++ b/pyproject.toml
@@ -255,11 +255,11 @@ dependencies = [
 dev = [
     "actionlint-py==1.6.26.11",
     "check-manifest==0.49",
+    "deptry==0.12.0",
     "doc8==1.1.1",
     "freezegun==1.4.0",
     "furo==2024.1.29",
     "mypy==1.8.0",
-    "pip_check_reqs==2.5.3",
     "pydocstyle==6.3",
     "pyenchant==3.2.2",
     "Pygments==2.17.2",
