--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -33,13 +33,10 @@ jobs:
       - name: "Install dependencies"
         run: |
           irm https://astral.sh/uv/install.ps1 | iex
-          uv venv C:/Users/runner/.venv
-          C:/Users/runner/.venv/Scripts/Activate.ps1
-          uv pip install --upgrade --editable .[dev]
+          uv pip install --system --upgrade --editable .[dev]
 
       - name: "Run tests"
         run: |
-          C:/Users/runner/.venv/Scripts/Activate.ps1
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
           python -m pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
