Simplify deptry setup by using new pep621_dev_dependency_groups option

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -277,7 +277,6 @@ dev = [
     "sphinxcontrib-spelling==8",
     "sybil==6.0.3",
     "types-requests==2.31.0.20240311",
-    "uv==0.1.24",
     "vulture==2.11",
     "VWS-Python-Mock==2024.2.16",
     "VWS-Test-Fixtures==2023.3.5",
@@ -305,3 +304,6 @@ keep_full_version = true
 
 reportUnnecessaryTypeIgnoreComment = true
 typeCheckingMode = "strict"
+
+[tool.deptry]
+pep621_dev_dependency_groups = ["dev"]
