--- a/pyproject.toml
+++ b/pyproject.toml
@@ -187,17 +187,9 @@ ignore = [
     "COM812",
     # Allow our chosen docstring line-style - no one-line summary.
     "D200",
-    "D203",
     "D205",
     "D212",
-    "D213",
-    # It is too much work to make every docstring imperative.
-    "D401",
-    # We ignore some docstyle errors which do not apply to Google style
-    # docstrings.
-    "D406",
-    "D407",
-    "D413",
+    "D415",
     # Ruff warns that this conflicts with the formatter.
     "ISC001",
     # We have an existing interface to support and so we do not want to change
@@ -216,6 +208,9 @@ ignore = [
 # We comment out code during development, and with VSCode auto-save, this code
 # is sometimes annoyingly removed.
 unfixable = ["ERA001"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
 "tests/test_*.py" = [
