--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ optional-dependencies.dev = [
     "doc8==1.1.1",
     "freezegun==1.5.1",
     "furo==2024.5.6",
+    "interrogate==1.7.0",
     "mypy==1.10.0",
     "pre-commit==3.7.1",
     "pydocstyle==6.3",
