--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,31 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
+ci:
+    # We use system Python, with required dependencies specified in pyproject.toml.
+    # We therefore cannot use those dependencies in pre-commit CI.
+    skip:
+        - actionlint
+        - mypy
+        - check-manifest
+        - pyright
+        - vulture
+        - pyroma
+        - deptry
+        - pylint
+        - ruff-check
+        - ruff-format-check
+        - ruff-check-fix
+        - ruff-format-fix
+        - doc8
+        - interrogate
+        - pyproject-fmt-check
+        - pyproject-fmt-fix
+        - linkcheck
+        - spelling
+        - docs
+        - pyright-verifytypes
+
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
