Use typeguard to check pytest fixture/parametrization types

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ optional-dependencies.dev = [
     "vulture==2.11",
     "vws-python-mock==2024.7.15",
     "vws-test-fixtures==2023.3.5",
+    "typeguard==4.3.0",
 ]
 urls.Documentation = "https://vws-python.readthedocs.io/en/latest/"
 urls.Source = "https://github.com/VWS-Python/vws-python"
@@ -277,6 +278,9 @@ keep_full_version = true
 
 xfail_strict = true
 log_cli = true
+typeguard-packages = """
+tests
+"""
 
 [tool.coverage.run]
 
