--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,13 @@ dynamic = [
     "version",
 ]
 dependencies = [
+    "beartype>=0.18.5",
     "requests",
     "urllib3",
     "vws-auth-tools",
 ]
 optional-dependencies.dev = [
     "actionlint-py==1.7.1.15",
-    "beartype==0.18.5",
     "check-manifest==0.49",
     "deptry==0.20.0",
     "doc8==1.1.1",
