--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,12 @@ lint.ignore = [
     "S101",
 ]
 
-lint.per-file-ignores."tests/test_*.py" = [
+lint.per-file-ignores."conftest.py" = [
+    # Allow hardcoded secrets in tests.
+    "S106",
+]
+
+lint.per-file-ignores."tests/*.py" = [
     # Do not require tests to have a one-line summary.
     "D205",
 ]
