--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ ci:
         - deptry
         - pylint
         - ruff-check
-        - ruff-format-check
+        - ruff-format-diff
         - ruff-check-fix
         - ruff-format-fix
         - doc8
@@ -108,9 +108,9 @@ repos:
         language: system
         types_or: [python]
 
-    -   id: ruff-format-check
-        name: Ruff format check
-        entry: ruff format --check
+    -   id: ruff-format-diff
+        name: Ruff format diff
+        entry: ruff format --diff
         language: system
         types_or: [python]
 
