--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ optional-dependencies.dev = [
     "check-manifest==0.49",
     "deptry==0.20.0",
     "doc8==1.1.2",
+    "doccmd==2024.9.14.5",
     "freezegun==1.5.1",
     "furo==2024.8.6",
     "interrogate==1.7.0",
