--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,6 +66,13 @@ repos:
         types_or: [python, toml]
         pass_filenames: false
 
+    -   id: mypy-docs
+        name: mypy-docs
+        stages: [push]
+        entry: doccmd --language=python --command="mypy"
+        language: system
+        types_or: [markdown, rst, python, toml]
+
     -   id: check-manifest
         name: check-manifest
         stages: [push]
@@ -80,6 +87,13 @@ repos:
         language: system
         types_or: [python, toml]
         pass_filenames: false
+
+    -   id: pyright-docs
+        name: pyright-docs
+        stages: [push]
+        entry: doccmd --language=python --command="pyright"
+        language: system
+        types_or: [markdown, rst, python, toml]
 
     -   id: vulture
         name: vulture
@@ -107,11 +121,24 @@ repos:
         stages: [manual]
         pass_filenames: false
 
+    -   id: pylint-docs
+        name: pylint-docs
+        entry: doccmd --language=python --command="pylint" --lowercase-file-name
+        language: system
+        stages: [manual]
+        types_or: [markdown, rst, python, toml]
+
     -   id: ruff-check
         name: Ruff check
         entry: python -m ruff check
         language: system
         types_or: [python]
+
+    -   id: ruff-check-docs
+        name: Ruff check docs
+        entry: doccmd --language=python --command="ruff check"
+        language: system
+        types_or: [markdown, rst]
 
     -   id: ruff-format-diff
         name: Ruff format diff
@@ -119,17 +146,35 @@ repos:
         language: system
         types_or: [python]
 
+    -   id: ruff-format-diff-docs
+        name: Ruff format diff docs
+        entry: doccmd --language=python --no-pad-file --command="ruff format --diff"
+        language: system
+        types_or: [markdown, rst]
+
     -   id: ruff-check-fix
         name: Ruff check fix
         entry: python -m ruff check --fix
         language: system
         types_or: [python]
 
+    -   id: ruff-check-fix-docs
+        name: Ruff check fix docs
+        entry: doccmd --language=python --command="ruff check --fix"
+        language: system
+        types_or: [markdown, rst]
+
     -   id: ruff-format-fix
         name: Ruff format
         entry: python -m ruff format
         language: system
         types_or: [python]
+
+    -   id: ruff-format-fix-docs
+        name: Ruff format docs
+        entry: doccmd --language=python --no-pad-file --command="ruff format"
+        language: system
+        types_or: [markdown, rst]
 
     -   id: doc8
         name: doc8
@@ -142,6 +187,12 @@ repos:
         entry: python -m interrogate
         language: system
         types_or: [python]
+
+    -   id: interrogate-docs
+        name: interrogate docs
+        entry: doccmd --language=python --command="interrogate"
+        language: system
+        types_or: [markdown, rst]
 
     -   id: pyproject-fmt-check
         name: pyproject-fmt check
