Ignore docs items in pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,25 +6,32 @@ ci:
     # We therefore cannot use those dependencies in pre-commit CI.
     skip:
         - actionlint
-        - mypy
         - check-manifest
-        - pyright
-        - vulture
-        - pyroma
         - deptry
-        - pylint
-        - ruff-check
-        - ruff-format-diff
-        - ruff-check-fix
-        - ruff-format-fix
         - doc8
+        - docs
         - interrogate
+        - interrogate-docs
+        - linkcheck
+        - mypy
+        - mypy-docs
+        - pylint
         - pyproject-fmt-check
         - pyproject-fmt-fix
-        - linkcheck
-        - spelling
-        - docs
+        - pyright
+        - pyright-docs
         - pyright-verifytypes
+        - pyroma
+        - ruff-check
+        - ruff-check-docs
+        - ruff-check-fix
+        - ruff-check-fix-docs
+        - ruff-format-diff
+        - ruff-format-diff-docs
+        - ruff-format-fix
+        - ruff-format-fix-docs
+        - spelling
+        - vulture
 
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
