Neater per-file-ignores

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -234,8 +234,12 @@ disable = [
     'useless-type-doc',
 ]
 
-# per-file-ignores = "docs/source/doccmd*.py:invalid-name, \ndoccmd_README:invalid-name"
-per-file-ignores = "docs/:invalid-name,\ndoccmd_README_rst.*.py:invalid-name"
+# This format is described in the following issue:
+# https://github.com/christopherpickering/pylint-per-file-ignores/issues/160
+per-file-ignores = """
+docs/:invalid-name
+doccmd_README_rst.*.py:invalid-name
+"""
 
 [tool.pylint.'FORMAT']
 
