Add shellcheck-py so that GitHub workflow files get linted for shell issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,10 @@ optional-dependencies.dev = [
     "pytest-cov==5.0.0",
     "pyyaml==6.0.2",
     "ruff==0.6.5",
+    # We add shellcheck-py not only for shell scripts and shell code blocks,
+    # but also because having it installed means that ``actionlint-py`` will
+    # use it to lint shell commands in GitHub workflow files.
+    "shellcheck-py==0.10.0.1",
     "sphinx==8.0.2",
     "sphinx-copybutton==0.5.2",
     "sphinx-substitution-extensions==2024.8.6",
