--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -101,9 +101,10 @@ repos:
 
     - id: vulture
       name: vulture
-      entry: python -m vulture
+      entry: python -m vulture .
       language: system
       types_or: [python]
+      pass_filenames: false
 
     - id: pyroma
       name: pyroma
