Use vulture on docs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ ci:
         - ruff-format-fix-docs
         - spelling
         - vulture
+        - vulture-docs
 
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
@@ -105,6 +106,12 @@ repos:
       language: system
       types_or: [python]
       pass_filenames: false
+
+    - id: vulture-docs
+      name: vulture docs
+      entry: doccmd --language=python --command="vulture"
+      language: system
+      types_or: [markdown, rst]
 
     - id: pyroma
       name: pyroma
