Test shell snippets in documentation code blocks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,11 +49,6 @@ repos:
     - id: file-contents-sorter
       files: spelling_private_dict\.txt$
     - id: trailing-whitespace
-- repo: https://github.com/shellcheck-py/shellcheck-py
-  rev: v0.10.0.1
-  hooks:
-    - id: shellcheck
-      args: ["--shell", "bash"]
 - repo: local
   hooks:
     - id: actionlint
@@ -62,6 +57,19 @@ repos:
       language: system
       pass_filenames: false
       types_or: [yaml]
+
+    - id: shellcheck
+      name: shellcheck
+      entry: shellcheck --shell bash
+      language: system
+      pass_filenames: false
+      types_or: [shell]
+
+    - id: shellcheck-docs
+      name: shellcheck-docs
+      entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash"
+      language: system
+      types_or: [markdown, rst]
 
     - id: mypy
       name: mypy
