Do not run new hooks on pre-commit CI

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,8 @@ ci:
         - spelling
         - vulture
         - vulture-docs
+        - shellcheck
+        - shellcheck-docs
 
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
