Add a few more pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,9 @@ ci:
 
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
+- repo: meta
+  hooks:
+    - id: check-useless-excludes
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.6.0
   hooks:
@@ -44,6 +47,7 @@ repos:
     - id: check-merge-conflict
     - id: check-shebang-scripts-are-executable
     - id: check-symlinks
+    - id: check-json
     - id: check-toml
     - id: check-vcs-permalinks
     - id: check-yaml
