Add shfmt to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,8 @@ ci:
         - vulture-docs
         - shellcheck
         - shellcheck-docs
+        - shfmt
+        - shfmt-docs
 
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
@@ -74,6 +76,19 @@ repos:
     - id: shellcheck-docs
       name: shellcheck-docs
       entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash"
+      language: system
+      types_or: [markdown, rst]
+
+    - id: shfmt
+      name: shfmt
+      entry: shfmt --write
+      language: system
+      pass_filenames: false
+      types_or: [shell]
+
+    - id: shfmt-docs
+      name: shfmt-docs
+      entry: doccmd --language=shell --language=console --no-pad-file --command="shfmt --write"
       language: system
       types_or: [markdown, rst]
 
