--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ optional-dependencies.dev = [
     # but also because having it installed means that ``actionlint-py`` will
     # use it to lint shell commands in GitHub workflow files.
     "shellcheck-py==0.10.0.1",
+    "shfmt-py==3.7.0.1",
     "sphinx==8.0.2",
     "sphinx-copybutton==0.5.2",
     "sphinx-substitution-extensions==2024.8.6",
