--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # TODO Here (or maybe get rid of this and use the ci yml?)
       # We do not use the cache action as uv is faster than the cache action.
       - name: "Install dependencies"
         run: |
