--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v3
 
-      - name: Install Python 3.12
+      - name: Install Python
         run: uv python install ${{ matrix.python-version }}
 
       - name: "Lint"
